platform/kubernetes/base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: shopsphere-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: identity-provider
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
